feat: protect upload endpoint with JWTs
